--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container-fluid text-center">
       <h1 class="mt-5">OMG You will not believe me but...</h1>
-      <h1 class="mt-5"></h1>
+      <h1 id="theExcuse" class="mt-5"></h1>
     </div>
     <scrip type="text/javascript" src="app.js"></scrip>
   </body>
