--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excuse Generator</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
@@ -17,6 +17,7 @@
       <h1 class="mt-5">OMG You will not believe me but...</h1>
       <h1 id="theExcuse" class="mt-5"></h1>
     </div>
+    <button type="button" id="btn" btn btn-danger>Generate new Excuse</button>
     <scrip type="text/javascript" src="app.js"></scrip>
   </body>
 </html>
