--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excuse Generator</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">OMG You will not believe me but...</h1>
-      <h1 id="theExcuse" class="mt-5"></h1>
+      <div>
+        <h1 class="mt-5">OMG You will not believe me but...</h1>
+        <h1 id="theExcuse" class="mt-5"></h1>
+      </div>
+      <br />
+      <br />
+      <br />
+    <div class="align-baseline">
+      <button type="button" id="btn" class="btn btn-danger">
+        Generate new Excuse
+      </button>
     </div>
-    <button type="button" id="btn" btn btn-danger>Generate new Excuse</button>
     <scrip type="text/javascript" src="app.js"></scrip>
   </body>
 </html>
